Bug 1571285 - Correctly style dark scrollbars in tree components. r=emilio
We need to ensure the rules that override all properties for scrollbar
part elements only apply to those that are NAC (and so will be eligible
for NAC style sharing).  We have some uses of non-NAC <scrollbar>
elements that should continue to inherit properties from their parents.

To avoid any changes in rule matching order that come with changing specificity,
we add a new :-moz-native-anonymous-no-specificity pseudo-class.

While we're here, we note :-moz-native-anonymous-no-specificity (and the
regular :-moz-native-anonymous pseudo-class) as not needing style
sharing cache revalidation, as we never share NAC styles.

Differential Revision: https://phabricator.services.mozilla.com/D56154

UltraBlame original commit: 7be7da6bb6455f9e5dbd8bf40d5db8394147e228

--- a/toolkit/content/minimal-xul.css
+++ b/toolkit/content/minimal-xul.css
@@ -38,7 +38,11 @@
 }
 
 
-scrollcorner, resizer, scrollbar, scrollbarbutton, slider {
+scrollcorner:-moz-native-anonymous-no-specificity,
+resizer:-moz-native-anonymous-no-specificity,
+scrollbar:-moz-native-anonymous-no-specificity,
+scrollbarbutton:-moz-native-anonymous-no-specificity,
+slider:-moz-native-anonymous-no-specificity {
   
 
 
@@ -109,7 +113,9 @@ thumb {
 
 
 
-scrollbarbutton, slider, thumb {
+scrollbarbutton:-moz-native-anonymous-no-specificity,
+slider:-moz-native-anonymous-no-specificity,
+thumb:-moz-native-anonymous-no-specificity {
   direction: inherit;
   cursor: inherit;
 }
